Added jQuery scrollbar because Windows - Chrome scrollbars are hideous

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -1,21 +1,5 @@
-/* Coolors Exported Palette - https://coolors.co/1f2421-8b8b8b-49a078-9cc5a1-dce1de */
-
-/* HSL */
-$black: hsla(144%, 7%, 13%, 1)
-$grey: hsla(140%, 1%, 55%, 1)
-$green: hsla(152%, 37%, 46%, 1)
-$lightgreen: hsla(127%, 26%, 69%, 1)
-$white: hsla(144%, 8%, 87%, 1)
-
-/* Ink breakpoints */
-$tiny-max: 320px
-$small-min: 321px
-$small-max: 640px
-$medium-min: 641px
-$medium-max: 960px
-$large-min: 961px
-$large-max: 1260px
-$xlarge-min: 1261px
+@import './colors.sass'
+@import './breakpoints.sass'
 
 .fade-enter-active, .fade-leave-active
   transition: opacity .5s ease
@@ -42,7 +26,7 @@ html
       background-color: $black
       width: 80vw
       height: 80vh
-      overflow-y: scroll
+      overflow-y: auto
       color: $black
 
       nav
@@ -184,7 +168,7 @@ html
 
           .technical-wrapper
             width: 100%
-            
+
             .skill-wrapper
               color: $grey
               text-align: center
